[tool.poetry]
name = "cheomseongdae"
version = "0.0.1"
description = "Let's go get the stars."
authors = ["pySatellite <pySatellite@gmail.com>"]
license = "GNU General Public License (GPL)"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
